--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ html, body {
 #storymap-embed {
     /*border: 1px solid #999;*/
 }
+.tl-storyslider {
+  display: none;
+}
 </style>
 <!-- HTML5 shim, for IE6-8 support of HTML elements--><!--[if lt IE 9]>
 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -37,13 +40,14 @@ html, body {
 </head>
 <body>
 
-<!-- timeline 2 -->
-        <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
-		<div id='timeline-embed' style="width: 100%; height: 600px"></div>
+
 
 
 <div id="storymap-embed"></div>
 
+<!-- timeline 2 -->
+        <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+		<div id='timeline-embed' style="width: 100%; height: 600px"></div>
 <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-M95DDQGLWH"></script>
   
