--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ html, body {
 
 
 
-<div id="storymap-embed"></div>
+<div id="storymap-embed" style="width:100%; height:50%"></div>
 
 <!-- timeline 2 -->
         <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
-		<div id='timeline-embed' style="width: 100%; height: 600px"></div>
+		<div id='timeline-embed' style="width: 100%; height: 50%"></div>
 <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-M95DDQGLWH"></script>
   
