--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@ html, body {
 
 <div id=container>
 	<div id="map-container">
-		<div id="storymap-embed" style="width:100%; height:50%"></div>
+		<div id="storymap-embed" style="width:100%; height:75%"></div>
 	</div>
 <!-- timeline 2 -->
 
         <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
 	<div id="timeline-container">
-		<div id='timeline-embed' style="width: 100%"></div>
+		<div id='timeline-embed' style="width: 100%; height:25%"></div>
 	</div>
 
 </div>
