--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@ html, body {
 #storymap-embed {
     /*border: 1px solid #999;*/
 }
-.tl-storyslider {
+#timeline-embed {
+      width: 100%;
+      height: 25%;  /* Adjust height to suit your design */
+      overflow-y: auto; /* Enables vertical scrolling */
+    }
+.tl-slider-background tl-animate {
   display: none;
 }
 </style>
