--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ html, body {
       height: 25%;  /* Adjust height to suit your design */
       overflow-y: auto; /* Enables vertical scrolling */
     }
-.tl-slider-background tl-animate {
+.tl-slider-item-container {
   display: none;
 }
 </style>
