--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@ html, body {
       height: 25%;  /* Adjust height to suit your design */
       overflow-y: auto; /* Enables vertical scrolling */
     }
-.tl-slider-item-container {
+.tl-slider-container-mask {
+  display: none;
+}
+.tl-slider-background
+{
   display: none;
 }
 </style>
