--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@ html, body {
       height: 25%;  /* Adjust height to suit your design */
       overflow-y: auto; /* Enables vertical scrolling */
     }
-.tl-slider-container-mask {
-  display: none;
-}
-.tl-slider-background
-{
+.tl-storyslider{
   display: none;
 }
 </style>
