--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html, body {
 #storymap-embed {
     /*border: 1px solid #999;*/
 }
-#timeline-embed {
+.tl-timenav {
       width: 100%;
       height: 25%;  /* Adjust height to suit your design */
       overflow-y: auto; /* Enables vertical scrolling */
@@ -39,7 +39,7 @@ html, body {
 }
 .tl-timeaxis {
   position: fixed
-  /* top: 0; Keeps it at the top of its container */
+ top: 0 /* ; Keeps it at the top of its container */
   z-index: 10; /* Ensures it stays above other content */
   box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Optional: adds a shadow for better visibility */
 }
