--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html, body {
 #storymap-embed {
     /*border: 1px solid #999;*/
 }
-.tl-timenav {
+#tl-timenav {
       width: 100%;
       height: 25%;  /* Adjust height to suit your design */
       overflow-y: auto; /* Enables vertical scrolling */
