--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html, body {
 #storymap-embed {
     /*border: 1px solid #999;*/
 }
-#tl-timenav {
+#timeline-embed {
       width: 100%;
       height: 25%;  /* Adjust height to suit your design */
       overflow-y: auto; /* Enables vertical scrolling */
@@ -38,7 +38,7 @@ html, body {
   display: none;
 }
 .tl-timeaxis {
-  position: fixed
+  position: absolute
  top: 0 /* ; Keeps it at the top of its container */
   z-index: 10; /* Ensures it stays above other content */
   box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Optional: adds a shadow for better visibility */
@@ -73,6 +73,16 @@ html, body {
             // See below for more about options.
             timeline = new TL.Timeline('timeline-embed','https://docs.google.com/spreadsheets/d/1mbJ-oPP27oUGdATrSqdkYsyvg_YPUSMDti-vgH0lMzM/edit?usp=sharing');
         </script>
+		
+		<script>
+    const timelineEmbed = document.getElementById('timeline-embed');
+    const timeaxis = document.querySelector('.tl-timeaxis');
+    timelineEmbed.addEventListener('scroll', () => {
+      const scrollTop = timelineEmbed.scrollTop;
+      // Adjust the position of the time axis based on the scroll position
+      timeaxis.style.top = `${scrollTop * -1}px`; // Inverse scroll effect
+    });
+  </script>
   
   <script>
     window.dataLayer = window.dataLayer || [];
