--- a/index.html
+++ b/index.html
@@ -187,11 +187,10 @@ document.addEventListener('DOMContentLoaded', function() {
       // Adjust the position of the time axis based on the scroll position
       timeaxis.style.top = `${scrollTop * -1}px`; // Inverse scroll effect
 	  console.error('doing stuff!');
-    });
-	}else {
+    })}else {
         console.error('Required elements not found!');
       }
-	 }
+	 };
   </script>
 </body>
 </html>
