--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ html, body {
             // optionally, a third argument with configuration options can be passed.
             // See below for more about options.
 			 // Fetch the JSON file from your server
-			//fetch('timeline.json')
-			//.then(response => response.json()) // Parse the JSON data
-			//.then(timeline_json => {
+			fetch('timeline.json')
+			.then(response => response.json()) // Parse the JSON data
+			.then(timeline_json => {
             // Create the timeline with the fetched JSON
-           // window.timeline = new TL.Timeline('timeline-embed', timeline_json);
-       // })
-            timeline = new TL.Timeline('timeline-embed','https://docs.google.com/spreadsheets/d/1mbJ-oPP27oUGdATrSqdkYsyvg_YPUSMDti-vgH0lMzM/edit?usp=sharing');
+           window.timeline = new TL.Timeline('timeline-embed', timeline_json);
+			})
+         //  timeline = new TL.Timeline('timeline-embed','https://docs.google.com/spreadsheets/d/1mbJ-oPP27oUGdATrSqdkYsyvg_YPUSMDti-vgH0lMzM/edit?usp=sharing');
         </script>
   <script>
     window.dataLayer = window.dataLayer || [];
