--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ html, body {
 			})
          //  timeline = new TL.Timeline('timeline-embed','https://docs.google.com/spreadsheets/d/1mbJ-oPP27oUGdATrSqdkYsyvg_YPUSMDti-vgH0lMzM/edit?usp=sharing');
         
-		var groups = document.querySelectorAll(".tl-timegroup");
+		<!-- var groups = document.querySelectorAll(".tl-timegroup");
 		function getRandomColor() {
         const letters = '0123456789ABCDEF';
         let color = '#';
@@ -89,7 +89,8 @@ html, body {
 		// Apply random color to each group
 		groups.forEach(function(group) {
 			group.style.backgroundColor = getRandomColor();
-		});
+			 group.style.color = getRandomColor();
+		}); -->
 		
 		</script>
   <script>
