--- a/index.html
+++ b/index.html
@@ -76,20 +76,11 @@ html, body {
          //  timeline = new TL.Timeline('timeline-embed','https://docs.google.com/spreadsheets/d/1mbJ-oPP27oUGdATrSqdkYsyvg_YPUSMDti-vgH0lMzM/edit?usp=sharing');
         
 		<!-- var groups = document.querySelectorAll(".tl-timegroup");
-		function getRandomColor() {
-        const letters = '0123456789ABCDEF';
-        let color = '#';
-			for (let i = 0; i < 6; i++) {
-				color += letters[Math.floor(Math.random() * 16)];
-				console.error("Found some colours mate!");
-			}
-        return color;
-		}
 
-		// Apply random color to each group
+		// Apply color to each group
 		groups.forEach(function(group) {
-			group.style.backgroundColor = getRandomColor();
-			 group.style.color = getRandomColor();
+			group.style.backgroundColor = '#ff00ff';
+			 group.style.color = '#00ff00';
 		}); -->
 		
 		</script>
