--- a/index.html
+++ b/index.html
@@ -45,38 +45,42 @@ html, body {
         <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
 </head>
 <body>
-		<div id="storymap-embed" style="width:100%; height:75%"></div>
-<!-- timeline 2 -->
+	<div id="storymap-embed" style="width:100%; height:75%"></div>
+	<!-- timeline 2 -->
 
-<script type="text/javascript">
+	<script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+	<div id='timeline-embed' style="width: 100%; height:25%"></div>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-M95DDQGLWH"></script>
+	<!-- Timeline 3 -->
+	<script type="text/javascript">
     // Fetch the JSON file from your server
     fetch('timeline.json')
         .then(response => response.json()) // Parse the JSON data
         .then(timeline_json => {
-            // Create the timeline with the fetched JSON
+            // Create the TimelineJS instance
             window.timeline = new TL.Timeline('timeline-embed', timeline_json);
 
-            // Start checking for groups after TimelineJS has initialized
+            // Start checking for groups AFTER TimelineJS has initialized
             checkIfGroupsLoaded();
         });
 
-    document.addEventListener('DOMContentLoaded', function () {
-        function checkIfGroupsLoaded() {
-            var groups = document.querySelectorAll(".tl-timegroup");
+    function checkIfGroupsLoaded() {
+        var groups = document.querySelectorAll(".tl-timegroup");
 
-            if (groups.length > 0) {
-                // Apply color to each group
-                groups.forEach(function (group) { // Fixed `groups` to `group`
-                    group.style.backgroundColor = '#ff00ff';
-                    group.style.color = '#00ff00';
-                });
-            } else {
-                // Poll again if the groups are not loaded
-                setTimeout(checkIfGroupsLoaded, 100); // Check every 100ms
-            }
+        if (groups.length > 0) {
+            // Apply color to each group
+            groups.forEach(function (group) {
+                group.style.backgroundColor = '#ff00ff';
+                group.style.color = '#00ff00';
+            });
+        } else {
+            // Poll again if the groups are not loaded
+            setTimeout(checkIfGroupsLoaded, 100); // Check every 100ms
         }
-    });
+    }
 </script>
+<script>
     window.dataLayer = window.dataLayer || [];
 
     function gtag(){ dataLayer.push(arguments); }
