--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@ html, body {
   display: none;
 }
 .tl-timenav-slider {
-    position: absolute;
-    bottom: 0; 
-    width: 100%;
-    transition: transform 0.1s ease-out; /* Smooth movement */
+    position: fixed !important;  /* Sticks it to the viewport */
+    //bottom: 0;                   /* Aligns to the bottom */
+   // left: 0;                     /* Aligns it to the left */
+   // width: 100%;                 /* Ensures it stretches across */
+   // background: rgba(255, 255, 255, 0.9); /* Optional: Semi-transparent background */
+   z-index: 1000;               /* Ensures it stays above other elements */
 }
 }
 </style>
@@ -91,7 +93,7 @@ function checkIfGroupsLoaded() {
     if (timeAxis) {
         // Add scroll event listener once the timeline is fully loaded
         timelineEmbed.addEventListener('scroll', () => {
-            const scrollTop = timelineEmbed.scrollTop;
+            const scrollAmount = timelineEmbed.scrollTop;
            timeAxis.style.transform = `translateY(${scrollAmount}px)`;
         });
     } else {
