--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@ function checkIfGroupsLoaded() {
 
             // Adjust the position of timeAxis based on scroll
             // We use transform here to apply a smoother transition instead of directly modifying top
-            timeAxis.style.transform = `translateY(${-scrollAmount}px)`;
+            //timeAxis.style.transform = `translateY(${-scrollAmount}px)`;
 
             // Log information for debugging
             console.log("Scroll position: " + scrollAmount);
             console.log("TimeAxis position (Y): " + rect.top);
             console.log("TimeAxis translateY: " + timeAxis.style.transform);
+			console.log("TimeAxis translateY: " + timeAxis.style.top);
         });
     } else {
         // Retry after a short delay to give TimelineJS more time to load
