--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@ html, body {
 .tl-storyslider{
   display: none;
 }
-.leaflet-control-attribution leaflet-control{
+.leaflet-control-attribution{
   display: none;
 }
 .tl-attribution{
 display: none;
 }
+.tl-timenav-slider {
+    position: absolute;
+    bottom: 0;  /* Fix to bottom of container */
 }
 </style>
 <!-- HTML5 shim, for IE6-8 support of HTML elements--><!--[if lt IE 9]>
