--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@ function checkIfGroupsLoaded() {
 
             // Get the current position of the timeAxis relative to the timelineEmbed
             const rect = timeAxis.getBoundingClientRect();
-			const Max = timelineEmbed.clientHeight;
+			const theheight = timelineEmbed.clientHeight;
+			const totalh = timelineEmbed.scrollHeight;
+			const Max = totalh - theheight;
 
             // Adjust the position of timeAxis based on scroll
             // We use transform here to apply a smoother transition instead of directly modifying top
