--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ function checkIfGroupsLoaded() {
             // Log information for debugging
             console.log("Scroll position: " + scrollAmount);
             console.log("TimeAxis position (Y): " + rect.top);
+			console.log("TimeAxis position (Y): " + rect.bottom);
             console.log("TimeAxis translateY: " + timeAxis.style.transform);
 			console.log("TimeAxis translateY: " + timeAxis.style.top);
         });
