--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ function checkIfGroupsLoaded() {
     }
 
     const timelineEmbed = document.getElementById('timeline-embed');
-    const timeAxis = document.querySelector(".tl-timenav-slider");
+    const timeAxis = document.querySelector(".tl-timeaxis");
 
     // Check if timeAxis exists before adding the scroll event listener
     if (timeAxis) {
